[gd_scene load_steps=15 format=2]

[ext_resource path="res://Speed Machine.gd" type="Script" id=1]
[ext_resource path="res://Graphics/speedcube0000.png" type="Texture" id=2]
[ext_resource path="res://Graphics/speedcube0003.png" type="Texture" id=3]
[ext_resource path="res://Graphics/speedcube0004.png" type="Texture" id=4]
[ext_resource path="res://Graphics/fixprompts0001.png" type="Texture" id=5]
[ext_resource path="res://Graphics/fixprompts0002.png" type="Texture" id=6]
[ext_resource path="res://Graphics/fixprompts0005.png" type="Texture" id=7]
[ext_resource path="res://Graphics/fixprompts0004.png" type="Texture" id=8]
[ext_resource path="res://Graphics/fixprompts0000.png" type="Texture" id=9]
[ext_resource path="res://Graphics/fixprompts0003.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 75, 45 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 38.5, 37 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "atk",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "duck",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "fix",
"speed": 5.0
} ]

[node name="Speed Machine" type="Node2D"]
scale = Vector2( 2.5, 2.5 )
script = ExtResource( 1 )

[node name="FixRadius" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="FixRadius"]
shape = SubResource( 2 )

[node name="BreakRadius" type="Area2D" parent="."]
collision_layer = 6
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BreakRadius"]
shape = SubResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )
animation = "idle"

[node name="prompt" type="AnimatedSprite" parent="."]
position = Vector2( 0, -56.676 )
frames = SubResource( 5 )
[connection signal="body_entered" from="FixRadius" to="." method="_on_FixRadius_body_entered"]
[connection signal="body_exited" from="FixRadius" to="." method="_on_FixRadius_body_exited"]
[connection signal="area_entered" from="BreakRadius" to="." method="_on_BreakRadius_area_entered"]
